Setup dynamic logging